# orthodb-tool

./: .gitignore  README.md  pyproject.toml
src/orthodb_tool/: __init__.py  __main__.py  annotations.py  api.py  cli.py  counts.py  fasta.py  records.py  taxonomy.py
