[project]
name = "orthodb-tool"
version = "0.1.0"
description = "CLI toolkit and Python library for querying OrthoDB"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "rich-click>=1.9.7",
]

[project.scripts]
orthodb-tool = "orthodb_tool.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "respx>=0.22.0",
    "ruff>=0.15.7",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
orthodb-tool = { path = ".", editable = true }
